# camcar

./: .gitignore  CMakeLists.txt  Kconfig.projbuild              
components/camera_setup/: CMakeLists.txt
components/camera_setup/http_server/: http_server.c
components/camera_setup/include/: camera.hpp
components/http_server/: CMakeLists.txt  http_server.cpp
components/http_server/include/: http_server.h
main/: CMakeLists.txt  README  main.cpp
